implemented - Auth/me api and user company isActive check
